# metaclean

./: README.md  pyproject.toml
src/metaclean/: cli.py  exiftool.py  path_utils.py
